packages/delta_ffi/lib/src/bindings.dart


  int dc_create_contact(
    ffi.Pointer<dc_context_t> ctx,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> addr,
  ) {
    return _dc_create_contact(
      ctx,
      name,
      addr,
    );
  }

  late final _dc_create_contactPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Pointer<dc_context_t>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('dc_create_contact');
  late final _dc_create_contact = _dc_create_contactPtr.asFunction<
      int Function(ffi.Pointer<dc_context_t>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  int dc_create_chat_by_contact_id(
    ffi.Pointer<dc_context_t> ctx,
    int contact_id,
  ) {
    return _dc_create_chat_by_contact_id(
      ctx,
      contact_id,
    );
  }

  late final _dc_create_chat_by_contact_idPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Pointer<dc_context_t>,
              ffi.Uint32)>>('dc_create_chat_by_contact_id');
  late final _dc_create_chat_by_contact_id = _dc_create_chat_by_contact_idPtr
      .asFunction<int Function(ffi.Pointer<dc_context_t>, int)>();

  int dc_send_text_msg(
    ffi.Pointer<dc_context_t> ctx,
    int chat_id,
    ffi.Pointer<ffi.Char> text,
  ) {
    return _dc_send_text_msg(
      ctx,
      chat_id,
      text,
    );
  }

  late final _dc_send_text_msgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Pointer<dc_context_t>, ffi.Uint32,
              ffi.Pointer<ffi.Char>)>>('dc_send_text_msg');
  late final _dc_send_text_msg = _dc_send_text_msgPtr.asFunction<
      int Function(ffi.Pointer<dc_context_t>, int, ffi.Pointer<ffi.Char>)>();

  int dc_send_msg(
    ffi.Pointer<dc_context_t> ctx,
    int chat_id,
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_send_msg(
      ctx,
      chat_id,
      msg,
    );
  }

  late final _dc_send_msgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Pointer<dc_context_t>, ffi.Uint32,
              ffi.Pointer<dc_msg_t>)>>('dc_send_msg');
  late final _dc_send_msg = _dc_send_msgPtr.asFunction<
      int Function(ffi.Pointer<dc_context_t>, int, ffi.Pointer<dc_msg_t>)>();

  ffi.Pointer<dc_chat_t> dc_get_chat(
    ffi.Pointer<dc_context_t> ctx,
    int chat_id,
  ) {
    return _dc_get_chat(
      ctx,
      chat_id,
    );
  }

  late final _dc_get_chatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_chat_t> Function(
              ffi.Pointer<dc_context_t>, ffi.Uint32)>>('dc_get_chat');
  late final _dc_get_chat = _dc_get_chatPtr.asFunction<
      ffi.Pointer<dc_chat_t> Function(ffi.Pointer<dc_context_t>, int)>();

  void dc_chat_unref(
    ffi.Pointer<dc_chat_t> chat,
  ) {
    return _dc_chat_unref(
      chat,
    );
  }

  late final _dc_chat_unrefPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<dc_chat_t>)>>(
          'dc_chat_unref');
  late final _dc_chat_unref =
      _dc_chat_unrefPtr.asFunction<void Function(ffi.Pointer<dc_chat_t>)>();

  ffi.Pointer<ffi.Char> dc_chat_get_name(
    ffi.Pointer<dc_chat_t> chat,
  ) {
    return _dc_chat_get_name(
      chat,
    );
  }

  late final _dc_chat_get_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<dc_chat_t>)>>('dc_chat_get_name');
  late final _dc_chat_get_name = _dc_chat_get_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<dc_chat_t>)>();

  ffi.Pointer<ffi.Char> dc_chat_get_mailinglist_addr(
    ffi.Pointer<dc_chat_t> chat,
  ) {
    return _dc_chat_get_mailinglist_addr(
      chat,
    );
  }

  late final _dc_chat_get_mailinglist_addrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<dc_chat_t>)>>('dc_chat_get_mailinglist_addr');
  late final _dc_chat_get_mailinglist_addr = _dc_chat_get_mailinglist_addrPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<dc_chat_t>)>();

  int dc_chat_get_type(
    ffi.Pointer<dc_chat_t> chat,
  ) {
    return _dc_chat_get_type(
      chat,
    );
  }

  late final _dc_chat_get_typePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<dc_chat_t>)>>(
          'dc_chat_get_type');
  late final _dc_chat_get_type =
      _dc_chat_get_typePtr.asFunction<int Function(ffi.Pointer<dc_chat_t>)>();

  int dc_chat_get_contact_id(
    ffi.Pointer<dc_chat_t> chat,
  ) {
    return _dc_chat_get_contact_id(
      chat,
    );
  }

  late final _dc_chat_get_contact_idPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<dc_chat_t>)>>(
          'dc_chat_get_contact_id');
  late final _dc_chat_get_contact_id = _dc_chat_get_contact_idPtr
      .asFunction<int Function(ffi.Pointer<dc_chat_t>)>();

  ffi.Pointer<dc_array_t> dc_get_chat_contacts(
    ffi.Pointer<dc_context_t> ctx,
    int chat_id,
  ) {
    return _dc_get_chat_contacts(
      ctx,
      chat_id,
    );
  }

  late final _dc_get_chat_contactsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_array_t> Function(
              ffi.Pointer<dc_context_t>, ffi.Uint32)>>('dc_get_chat_contacts');
  late final _dc_get_chat_contacts = _dc_get_chat_contactsPtr.asFunction<
      ffi.Pointer<dc_array_t> Function(ffi.Pointer<dc_context_t>, int)>();

  ffi.Pointer<dc_contact_t> dc_get_contact(
    ffi.Pointer<dc_context_t> ctx,
    int contact_id,
  ) {
    return _dc_get_contact(
      ctx,
      contact_id,
    );
  }

  late final _dc_get_contactPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_contact_t> Function(
              ffi.Pointer<dc_context_t>, ffi.Uint32)>>('dc_get_contact');
  late final _dc_get_contact = _dc_get_contactPtr.asFunction<
      ffi.Pointer<dc_contact_t> Function(ffi.Pointer<dc_context_t>, int)>();

  void dc_contact_unref(
    ffi.Pointer<dc_contact_t> contact,
  ) {
    return _dc_contact_unref(
      contact,
    );
  }

  late final _dc_contact_unrefPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<dc_contact_t>)>>(
          'dc_contact_unref');
  late final _dc_contact_unref = _dc_contact_unrefPtr
      .asFunction<void Function(ffi.Pointer<dc_contact_t>)>();

  ffi.Pointer<ffi.Char> dc_contact_get_addr(
    ffi.Pointer<dc_contact_t> contact,
  ) {
    return _dc_contact_get_addr(
      contact,
    );
  }

  late final _dc_contact_get_addrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<dc_contact_t>)>>('dc_contact_get_addr');
  late final _dc_contact_get_addr = _dc_contact_get_addrPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<dc_contact_t>)>();

  ffi.Pointer<ffi.Char> dc_contact_get_name(
    ffi.Pointer<dc_contact_t> contact,
  ) {
    return _dc_contact_get_name(
      contact,
    );
  }

  late final _dc_contact_get_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<dc_contact_t>)>>('dc_contact_get_name');
  late final _dc_contact_get_name = _dc_contact_get_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<dc_contact_t>)>();

  int dc_block_contact(
    ffi.Pointer<dc_context_t> ctx,
    int contact_id,
  ) {
    return _dc_block_contact(
      ctx,
      contact_id,
    );
  }

  late final _dc_block_contactPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<dc_context_t>, ffi.Uint32)>>('dc_block_contact');
  late final _dc_block_contact = _dc_block_contactPtr
      .asFunction<int Function(ffi.Pointer<dc_context_t>, int)>();

  int dc_unblock_contact(
    ffi.Pointer<dc_context_t> ctx,
    int contact_id,
  ) {
    return _dc_unblock_contact(
      ctx,
      contact_id,
    );
  }

  late final _dc_unblock_contactPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<dc_context_t>, ffi.Uint32)>>('dc_unblock_contact');
  late final _dc_unblock_contact = _dc_unblock_contactPtr
      .asFunction<int Function(ffi.Pointer<dc_context_t>, int)>();

  int dc_lookup_contact_id_by_addr(
    ffi.Pointer<dc_context_t> ctx,
    ffi.Pointer<ffi.Char> addr,
  ) {
    return _dc_lookup_contact_id_by_addr(
      ctx,
      addr,
    );
  }

  late final _dc_lookup_contact_id_by_addrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Pointer<dc_context_t>,
              ffi.Pointer<ffi.Char>)>>('dc_lookup_contact_id_by_addr');
  late final _dc_lookup_contact_id_by_addr =
      _dc_lookup_contact_id_by_addrPtr.asFunction<
          int Function(ffi.Pointer<dc_context_t>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<dc_msg_t> dc_get_msg(
    ffi.Pointer<dc_context_t> ctx,
    int msg_id,
  ) {
    return _dc_get_msg(
      ctx,
      msg_id,
    );
  }

  late final _dc_get_msgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_msg_t> Function(
              ffi.Pointer<dc_context_t>, ffi.Uint32)>>('dc_get_msg');
  late final _dc_get_msg = _dc_get_msgPtr.asFunction<
      ffi.Pointer<dc_msg_t> Function(ffi.Pointer<dc_context_t>, int)>();

  void dc_msg_unref(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_unref(
      msg,
    );
  }

  late final _dc_msg_unrefPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<dc_msg_t>)>>(
          'dc_msg_unref');
  late final _dc_msg_unref =
      _dc_msg_unrefPtr.asFunction<void Function(ffi.Pointer<dc_msg_t>)>();

  ffi.Pointer<ffi.Char> dc_msg_get_text(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_text(
      msg,
    );
  }

  late final _dc_msg_get_textPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<dc_msg_t>)>>('dc_msg_get_text');
  late final _dc_msg_get_text = _dc_msg_get_textPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<dc_msg_t>)>();

  ffi.Pointer<ffi.Char> dc_msg_get_html(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_html(
      msg,
    );
  }

  late final _dc_msg_get_htmlPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<dc_msg_t>)>>('dc_msg_get_html');
  late final _dc_msg_get_html = _dc_msg_get_htmlPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<dc_msg_t>)>();

  ffi.Pointer<ffi.Char> dc_msg_get_subject(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_subject(
      msg,
    );
  }

  late final _dc_msg_get_subjectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<dc_msg_t>)>>('dc_msg_get_subject');
  late final _dc_msg_get_subject = _dc_msg_get_subjectPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<dc_msg_t>)>();

  int dc_msg_get_chat_id(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_chat_id(
      msg,
    );
  }

  late final _dc_msg_get_chat_idPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<dc_msg_t>)>>(
          'dc_msg_get_chat_id');
  late final _dc_msg_get_chat_id =
      _dc_msg_get_chat_idPtr.asFunction<int Function(ffi.Pointer<dc_msg_t>)>();

  int dc_msg_get_id(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_id(
      msg,
    );
  }

  late final _dc_msg_get_idPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<dc_msg_t>)>>(
          'dc_msg_get_id');
  late final _dc_msg_get_id =
      _dc_msg_get_idPtr.asFunction<int Function(ffi.Pointer<dc_msg_t>)>();

  int dc_msg_get_viewtype(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_viewtype(
      msg,
    );
  }

  late final _dc_msg_get_viewtypePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<dc_msg_t>)>>(
          'dc_msg_get_viewtype');
  late final _dc_msg_get_viewtype =
      _dc_msg_get_viewtypePtr.asFunction<int Function(ffi.Pointer<dc_msg_t>)>();

  int dc_msg_get_timestamp(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_timestamp(
      msg,
    );
  }
